<resources>
    <string name="app_name">BooksForYou</string>
    <string name="appName">BooksForYou</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Hello and welcome to BooksForYourApp!</string>
    <string name="Welcome2">We can help you keep track of what mesmerizing books you are reading.Your book wishes are also safe with us. So let\'s emerge in the beautiful world of books together.</string>
    <string name="start_journey">Start your journey.</string>
    <string name="book_icon_desc">Freepik book icon</string>
    <string name="AddReminderTitle">Add a reminder</string>
    <string name="reminderBody">Never forget about reading or buying new books. We will remind you about everything.</string>
    <string name="addReminder">Add new reminder</string>
    <string name="currentReminders">Current reminders</string>
    <string name="readReminder">Reading reminder - every day</string>
    <string name="secondaryListTextReading">Reading</string>
    <string name="notificationsicon">NotificationsIcon</string>
    <string name="buyReminder">Get new books reminder - every Sunday</string>
    <string name="ListTextBuying">Buying</string>
    <string name="hello_user">Hello, user!</string>
    <string name="user_account">user@gmail.com</string>
    <string name="current_account"><![CDATA[Current account:]]></string>
    <string name="change_account">You can change account here:</string>
    <string name="userName1">Antonia Alexandra</string>
    <string name="userName2">Alexandru Lepadatu</string>
    <string name="userName3">Miruna Daian</string>
    <string name="inspo_text">Here you can get some books inspiration from your friends</string>
    <string name="books1">ABSALOM, ABSALOM!,\nA TIME TO KILL,\nTHE HOUSE OF MIRTH</string>
    <string name="books2">EAST OF EDEN</string>
    <string name="books3">EAST OF EDEN,\nA SCANNER DARKLY,\nVILE BODIES</string>
    <string name="add_a_book">Add a book</string>
    <string name="image_wishlist">image wishlist</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="currently_reading">Currently reading:</string>
    <string name="book_wishlist_icon">book wishlist icon</string>
    <string name="book_cover">Book cover</string>
    <string name="book_info">Started at: 10/10/2021\n Total pages: 340</string>
    <string name="author_ex">JOHN GREEN</string>
    <string name="title_ex">THE FAULT IN OUR STARS</string>
    <string name="books_read_so_far">Books read so far:</string>
    <string name="finish_reading">Finish reading</string>
    <string name="delete_book">Delete Book</string>
    <string name="book_finished_info">Finished on: 12/02/2022\n No pages: 324</string>
    <string name="add_book">Add book</string>
    <string name="your_books">Your books</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Settings">Settings</string>
    <string name="SeeWhatOthers">See what others are reading</string>
    <string name="your_account">Your account</string>
    <string name="startYourJourney">Start your journey</string>
    <string name="add_a_new_book_to_your_collection">Add a new book to your collection</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author name</string>
    <string name="no_book_cover_please_add_one">No book cover. Please add one.</string>
    <string name="add_book_cover">Add book cover</string>
    <string name="finished">Finished</string>
    <string name="in_progress">In progress</string>
    <string name="have_you_finished_it_already">Have you finished it already?</string>
    <string name="when_have_you_finished_it">When have you finished it?</string>
    <string name="when_have_you_started_it">When have you started it?</string>
    <string name="cancel">Cancel</string>
    <string name="save_book">Save book</string>
    <string name="total_number_of_pages">Total number of pages</string>
    <string name="there_are_no_read_books_yet">There are no read books yet.</string>
    <string name="there_are_no_finished_books_yet">There are no finished books yet. Keep reading.</string>
    <string name="share">Share</string>
    <string name="observations">Observations</string>
    <string name="disable_reminders">Disable reminders</string>
    <string name="enable_reminders">Enable reminders</string>
    <string name="no_account">There is no Facebook account connected to this app yet.</string>
    <string name="connect">Connect</string>
    <string name="facebook_app_id">521106366123627</string>
    <string name="fb_login_protocol_scheme">fb521106366123627</string>
    <string name="facebook_client_token">b9fe4ee22082b22ac570881aa2d1914f</string>
    <string name="best_sellers">New York Times Best Sellers</string>
    <string name="current_week_s_new_york_times_best_sellers">Current week\'s New York Times best sellers</string>
    <string name="add_new_wish">Add new wish</string>
</resources>