<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".navigation.addBookDialog"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <!-- Dialog fragment -->
    <TextView
        android:id="@+id/DialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/add_a_new_book_to_your_collection"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/book_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/book_name"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DialogTitle"
        android:inputType="textCapSentences"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/author_name"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/no_pages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/total_number_of_pages"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_name" />

    <TextView
        android:id="@+id/book_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:text="@string/book_cover"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_pages" />

    <TextView
        android:id="@+id/book_cover_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/no_book_cover_please_add_one"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_cover" />

    <ImageView
        android:id="@+id/preview_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/book_icon_desc"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_cover_text"
        app:srcCompat="@mipmap/book_pages" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:id="@+id/add_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_book_cover"
        app:icon="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview_img" />

    <TextView
        android:id="@+id/book_type_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:text="@string/have_you_finished_it_already"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_cover" />

    <RadioGroup
        android:id="@+id/book_type"
        android:checkedButton="@+id/finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_type_text">

        <RadioButton
            android:id="@+id/finished"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finished" />
    <RadioButton
        android:id="@+id/in_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/in_progress"/>
    </RadioGroup>

    <TextView
    android:id="@+id/finished_text"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="32dp"
    android:gravity="start"
    android:text="@string/when_have_you_finished_it"
    android:textAppearance="?attr/textAppearanceBody2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/book_type" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finished_text" />

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/save_book" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>