<?xml version="1.0" encoding="utf-8"?>


<!-- Your account -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="88dp"

    tools:context=".navigation.YourAccount">

    <TextView
        android:id="@+id/hello_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/hello_user"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <LinearLayout
        android:id="@+id/account_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_user_text"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/current_account"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <TextView
            android:id="@+id/account_adress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/user_account"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textStyle="italic" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_layout"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/change_account" />


</RelativeLayout>
