<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".navigation.AddWish"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <!-- Dialog fragment -->
            <TextView
                android:id="@+id/DialogTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/add_a_new_book_to_your_collection"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/book_name"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DialogTitle"
                android:inputType="textCapSentences"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/author_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/author_name"
                android:inputType="textCapSentences"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/observations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/observations"
                android:inputType="textCapSentences"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

            <LinearLayout
                android:layout_width="295dp"
                android:layout_height="43dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/observations">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/save_book" />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>