<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".navigation.Settings">

<!-- Set a reminder -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currentReminders"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reminderBody"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/handle_reminders"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/disable_reminders" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="88dp">

                <ImageView
                    android:id="@+id/mtrl_list_item_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/notificationsicon"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_baseline_notifications_active_24" />

                <TextView
                    android:id="@+id/mtrl_list_item_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_toEndOf="@id/mtrl_list_item_icon"
                    android:maxLines="1"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/readReminder"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnSurface"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/reading_reminder_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:layout_gravity="center_vertical"
                    android:layout_below="@+id/mtrl_list_item_text"
                    android:layout_toEndOf="@id/mtrl_list_item_icon"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="88dp">

                <ImageView
                    android:id="@+id/mtrl_list_item_icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/notificationsicon"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_baseline_notifications_active_24" />

                <TextView
                    android:id="@+id/mtrl_list_item_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_toEndOf="@id/mtrl_list_item_icon2"
                    android:maxLines="1"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/buyReminder"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnSurface"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/buying_reminder_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:layout_gravity="center_vertical"
                    android:layout_below="@+id/mtrl_list_item_text2"
                    android:layout_toEndOf="@id/mtrl_list_item_icon2"/>


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>
